--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ body {
 	text-align: center;
 }
 
+a {
+	color: #fff;
+}
+
+h1 {
+	line-height: 1.4;
+}
+
 .btn {
 	border: 0;
 	background-color: #fff;
@@ -38,6 +46,32 @@ body {
 	justify-content: center;
 	height: 100vh;
 	width: 100vw;
+}
+
+.screen.up {
+	margin-top: -100vh;
+}
+
+.insects-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	list-style: none;
+	padding: 0;
+}
+
+.insects-list li {
+	margin: 10px;
+}
+
+.choose-insect-btn {
+	background-color: transparent;
+	border: 2px solid #fff;
+	color: #fff;
+	cursor: pointer;
+	font-family: inherit;
+	height: 150px;
+	width: 150px;
 }
 
 .choose-insect-btn img {
