active & hover effect

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,15 @@ h1 {
 	width: 150px;
 }
 
+.choose-insect-btn:hover {
+	background-color: #fff;
+	color: #800080;
+}
+
+.choose-insect-btn:active {
+	background-color: rgba(255, 255, 255, 0.7);
+}
+
 .choose-insect-btn img {
 	width: 100px;
 	height: 100px;
