--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,40 @@ h1 {
 	height: 100px;
 	object-fit: contain;
 }
+
+.game-container {
+	position: relative;
+}
+
+.time,
+.score {
+	position: absolute;
+	top: 20px;
+}
+
+.time {
+	left: 20px;
+}
+
+.score {
+	right: 20px;
+}
+
+.message {
+	line-height: 1.7;
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	padding: 20px;
+	z-index: 100;
+	text-align: center;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: (-50%, -150%);
+}
+
+.message.visible {
+	translate: translate0_;
+	opacity: 1;
+}
