styled insect image

--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,16 @@ h1 {
 	translate: translate(-50%, 150%);
 	opacity: 1;
 }
+
+.insect {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100px;
+	height: 100px;
+}
+
+.insect img {
+	width: 100px;
+	height: 100px;
+}
