--- a/styles.css
+++ b/styles.css
@@ -128,15 +128,21 @@ h1 {
 }
 
 .insect {
+	cursor: pointer;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 100px;
 	height: 100px;
 	position: absolute;
-	top: 200px;
-	left: 300px;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 0.3s ease-in-out;
+	top: 400px;
+	left: 500px;
+}
+
+.insect.caught {
+	transform: translate(-50%, -50%) scale(0);
 }
 
 .insect img {
